--- a/plugin.xml
+++ b/plugin.xml
@@ -90,7 +90,9 @@ xmlns:android="http://schemas.android.com/apk/res/android"
         <header-file src="src/ios/CDVLocation.h" />
         <source-file src="src/ios/CDVLocation.m" />
         <framework src="CoreLocation.framework" />
-
+        <edit-config target="NSLocationWhenInUseUsageDescription" file="*-Info.plist" mode="merge">
+            <string>O Alô Prefeito, solicita o acesso a Localização para a que possamos obter a posição geográfica dos problemas na sua cidade!</string>
+        </edit-config>
     </platform>
 
     <!-- windows universal apps (Windows 8.1, Windows Phone 8.1, Windows 8.0) -->
